--- a/_blog/2009-06-01-blog2.md
+++ b/_blog/2009-06-01-blog2.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: "Blog 2"
+title: "Notas Calidad del Software"
 categories:
-  - Edge Case
-tags:
-  - 8BIT
-  - alignment
-  - Articles
-  - captions
-  - categories
+  - Notas
 ---
 
-This post has many snjsndjnsdjnsdjnsdnsdjnsd
+Factores que determinan la calidad del software.
+
+* Medidas Directas
+* Medidas Indirectas
+
+### Métricas del Software
+Son las que están relacionadas con el desarrollo del software como funcionalidad, complejidad, eficiencia.
 
